Compatibility with Java 17